:bug: Fix missing background image URL

--- a/src/styles/base/Index.css
+++ b/src/styles/base/Index.css
@@ -2,7 +2,7 @@
   min-height: 100vh;
 }
 #Start {
-  background-image: url("images/background.png");
+  background-image: url("/images/background.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 60%;
